// file: proto/database.proto
// version: 1.0.0
// guid: d2b5a1f0-e01a-4f79-9a50-df50aa774617

edition = "2023";

package gcommon.v1.database;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/jdfalk/subtitle-manager/pkg/databasepb;databasepb";
option features.(pb.go).api_level = API_HYBRID;

message SubtitleRecord {
  string id = 1;
  string file = 2;
  string video_file = 3;
  string release = 4;
  string language = 5;
  string service = 6;
  bool embedded = 7;
  string source_url = 8;
  string provider_metadata = 9;
  optional double confidence_score = 10;
  optional string parent_id = 11;
  string modification_type = 12;
  google.protobuf.Timestamp created_at = 13;
}

message DownloadRecord {
  string id = 1;
  string file = 2;
  string video_file = 3;
  string provider = 4;
  string language = 5;
  string search_query = 6;
  optional double match_score = 7;
  int32 download_attempts = 8;
  string error_message = 9;
  optional int32 response_time_ms = 10;
  google.protobuf.Timestamp created_at = 11;
}
